doc: api openapi comment
